[tool.poetry]
name = "project-noe"
version = "0.1.0"
description = "Project Noe is founded to help people and government(s) to prevent the spread of COVID19."
authors = ["Rollet Developers"]

[tool.poetry.dependencies]
python = "^3.6"
django = "^3.0.5"
djangorestframework = "^3.11.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
